<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">shanbay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="action_select">筛选</string>

    <string name="mainactivity_done_tag_text">( 已读 )</string>

    <string name="level_one">Level one</string>
    <string name="level_two">Level two</string>
    <string name="level_three">Level three</string>
    <string name="level_four">Level four</string>
    <string name="level_five">Level five</string>

</resources>
